...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.NewPostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarNewPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/new_post_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/PopupOverlay">

        </androidx.appcompat.widget.Toolbar>
...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <EditText
            android:id="@+id/txtNewPost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/new_post_hint"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
...
